--- a/peep_frontend/package.json
+++ b/peep_frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@cartesi/rollups": "1.0.0",
+        "@apollo/client": "^3.7.13",
         "@ethersproject/providers": "^5.6.0",
         "@openzeppelin/contracts": "4.8.3",
         "@tailwindcss/typography": "^0.5.10",
