Frontend theme updates

--- a/peep_frontend/package.json
+++ b/peep_frontend/package.json
@@ -17,6 +17,7 @@
         "@web3-onboard/core": "^2.2.6",
         "@web3-onboard/injected-wallets": "^2.0.5",
         "@web3-onboard/react": "^2.1.5",
+        "apexcharts": "^3.45.2",
         "buffer": "^6.0.3",
         "cacheable-request": "^10.2.7",
         "d3": "^7.8.5",
@@ -27,8 +28,10 @@
         "next": "14.0.1",
         "nth-check": "2.0.1",
         "react": "^18.1.0",
+        "react-apexcharts": "^1.4.1",
         "react-daisyui": "^5.0.0",
         "react-dom": "^18.1.0",
+        "react-hot-toast": "^2.4.1",
         "react-icons": "^5.0.1",
         "react-router-dom": "^6.21.3",
         "react-scripts": "5.0.1",
