--- a/peep_backend/package.json
+++ b/peep_backend/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "description": "JS DApp",
   "dependencies": {
+    "@types/stopword": "^2.0.3",
+    "csv-parser": "^3.0.0",
     "ethers": "^6.7.1",
+    "fs": "^0.0.1-security",
+    "stopword": "^3.0.1",
     "viem": "^2.5.0"
   },
   "devDependencies": {
