--- a/peep_frontend/package.json
+++ b/peep_frontend/package.json
@@ -7,6 +7,8 @@
         "@cartesi/rollups": "1.0.0",
         "@ethersproject/providers": "^5.6.0",
         "@openzeppelin/contracts": "4.8.3",
+        "@radix-ui/react-alert-dialog": "^1.0.5",
+        "@radix-ui/react-icons": "^1.3.0",
         "@tailwindcss/typography": "^0.5.10",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
@@ -24,6 +26,7 @@
         "ethers": "5.7.2",
         "graphql": "^16.4.0",
         "loader-utils": "3.2.1",
+        "lucide-react": "^0.320.0",
         "minimatch": "^3.0.5",
         "next": "14.0.1",
         "nth-check": "2.0.1",
