--- a/peep_backend/package.json
+++ b/peep_backend/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "JS DApp",
   "dependencies": {
+    "@orama/orama": "^2.0.5",
     "@types/stopword": "^2.0.3",
+    "cartesi-router": "^1.0.4",
+    "cartesi-wallet": "^1.0.4",
     "csv-parser": "^3.0.0",
     "ethers": "^6.7.1",
     "fs": "^0.0.1-security",
