--- a/peep_frontend/package.json
+++ b/peep_frontend/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.7.13",
     "@cartesi/rollups": "1.0.0",
     "@ethersproject/providers": "^5.6.0",
+    "@headlessui/react": "^1.7.18",
     "@openzeppelin/contracts": "4.8.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -23,6 +24,7 @@
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "cacheable-request": "^10.2.7",
+    "classnames": "^2.5.1",
     "d3": "^7.8.5",
     "ethers": "5.7.2",
     "fs": "^0.0.1-security",
