--- a/peep_frontend/package.json
+++ b/peep_frontend/package.json
@@ -10,7 +10,9 @@
     "@openzeppelin/contracts": "4.8.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@rainbow-me/rainbowkit": "2",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query": "^5.29.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
@@ -47,6 +49,8 @@
     "typescript": "^4.6.4",
     "urql": "^2.2.0",
     "uuid": "^9.0.1",
+    "viem": "2.x",
+    "wagmi": "2",
     "web-vitals": "^2.1.0",
     "web3": "^1.7.3",
     "webpack": "^5.76.0",
