--- a/peep_frontend/tsconfig.json
+++ b/peep_frontend/tsconfig.json
@@ -28,9 +28,11 @@
   },
   "include": [
     "src",
+    "**/*.ts",
+    "**/*.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
   ]
 }
