--- a/peeps_backend_js/package.json
+++ b/peeps_backend_js/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "ethers": "^6.7.1",
+    "stopword": "^3.0.1",
     "viem": "^2.9.26",
     "wink-naive-bayes-text-classifier": "^2.2.1"
   },
