--- a/peeps_frontend_thirdweb/package.json
+++ b/peeps_frontend_thirdweb/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.10.5",
     "eslint": "^8",
