--- a/peeps_frontend_thirdweb/package.json
+++ b/peeps_frontend_thirdweb/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.19",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@uidotdev/usehooks": "^2.4.1",
+    "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "ethers": "5.7.2",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.378.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "thirdweb": "^5",
