--- a/peeps_frontend_thirdweb/package.json
+++ b/peeps_frontend_thirdweb/package.json
@@ -26,7 +26,10 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "thirdweb": "^5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@web3-onboard/core": "^2.2.6",
+    "@web3-onboard/injected-wallets": "^2.0.5",
+    "@web3-onboard/react": "^2.1.5"
   },
   "devDependencies": {
     "@types/node": "^20",
