--- a/peeps_frontend_thirdweb/package.json
+++ b/peeps_frontend_thirdweb/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@apollo/client": "^3.10.2",
     "@cartesi/rollups": "^1.4.0",
+    "@chakra-ui/react": "^2.8.2",
     "@headlessui/react": "^1.7.19",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@uidotdev/usehooks": "^2.4.1",
+    "@web3-onboard/core": "^2.2.6",
+    "@web3-onboard/injected-wallets": "^2.0.5",
+    "@web3-onboard/react": "^2.1.5",
     "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "ethers": "5.7.2",
     "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "lucide-react": "^0.378.0",
     "next": "14.1.0",
     "react": "^18",
@@ -26,10 +31,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "thirdweb": "^5",
-    "uuid": "^9.0.1",
-    "@web3-onboard/core": "^2.2.6",
-    "@web3-onboard/injected-wallets": "^2.0.5",
-    "@web3-onboard/react": "^2.1.5"
+    "urql": "^4.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
