--- a/peeps_backend_prod/package.json
+++ b/peeps_backend_prod/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "description": "JS DApp",
   "dependencies": {
+    "@cartesi/cli": "^0.14.1",
     "@cartesi/rollups": "^1.4.0",
+    "axios": "^1.6.8",
     "cartesi-router": "^1.0.4",
     "cartesi-wallet": "^1.0.5",
-    "ethers": "^6.7.1",
-    "viem": "^2.10.3",
-    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "ethers": "^6.7.1",
     "stopword": "^3.0.1",
+    "viem": "^2.10.3",
     "wink-naive-bayes-text-classifier": "^2.2.1"
   },
   "devDependencies": {
