--- a/peeps_frontend/src/app/config.json
+++ b/peeps_frontend/src/app/config.json
@@ -13,6 +13,20 @@
         "Erc1155SinglePortalAddress":"0x7CFB0193Ca87eB6e48056885E026552c3A941FC4",
         "Erc1155BatchPortalAddress":"0xedB53860A6B52bbb7561Ad596416ee9965B055Aa"
     },
+    "421614":{
+        "token": "SepARB",
+        "label": "Arbitrum Sepolia Test Network",
+        "rpcUrl": "https://sepolia-rollup.arbitrum.io/rpc",
+        "graphqlAPIURL" : "https://peeps.fly.dev/graphql",
+        "inspectAPIURL": "https://peeps.fly.dev/inspect",
+        "DAppRelayAddress":"0xF5DE34d6BbC0446E2a45719E718efEbaaE179daE",
+        "InputBoxAddress":"0x59b22D57D4f067708AB0c00552767405926dc768",
+        "EtherPortalAddress":"0xFfdbe43d4c855BF7e0f105c400A50857f53AB044",
+        "Erc20PortalAddress":"0x9C21AEb2093C32DDbC53eEF24B873BDCd1aDa1DB",
+        "Erc721PortalAddress":"0x237F8DD094C0e47f4236f12b4Fa01d6Dae89fb87",
+        "Erc1155SinglePortalAddress":"0x7CFB0193Ca87eB6e48056885E026552c3A941FC4",
+        "Erc1155BatchPortalAddress":"0xedB53860A6B52bbb7561Ad596416ee9965B055Aa"
+    },
     "aa36a7":{
         "token": "SepETH",
         "label": "Sepolia Test Network",
