--- a/peeps_frontend/tsconfig.json
+++ b/peeps_frontend/tsconfig.json
@@ -23,6 +23,6 @@
       "@public/*": ["./public/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/wallet/components/depositTx.jsx"],
   "exclude": ["node_modules"]
 }
