--- a/peeps_frontend/package.json
+++ b/peeps_frontend/package.json
@@ -27,6 +27,7 @@
     "graphql-tag": "^2.12.6",
     "lucide-react": "^0.378.0",
     "next": "14.1.0",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
