--- a/peeps_frontend/src/app/config.json
+++ b/peeps_frontend/src/app/config.json
@@ -17,8 +17,8 @@
         "token": "SepARB",
         "label": "Arbitrum Sepolia Test Network",
         "rpcUrl": "https://sepolia-rollup.arbitrum.io/rpc",
-        "graphqlAPIURL" : "https://peepsdev.fly.dev/graphql",
-        "inspectAPIURL": "https://peepsdev.fly.dev/inspect",
+        "graphqlAPIURL" : "https://peepsdevs.fly.dev/graphql",
+        "inspectAPIURL": "https://peepsdevs.fly.dev/inspect",
         "DAppRelayAddress":"0xF5DE34d6BbC0446E2a45719E718efEbaaE179daE",
         "InputBoxAddress":"0x59b22D57D4f067708AB0c00552767405926dc768",
         "EtherPortalAddress":"0xFfdbe43d4c855BF7e0f105c400A50857f53AB044",
